
# A list of all the files in the current directory which can be regenerated
MAINTAINERCLEANFILES = Makefile.in

# bin_SCRIPTS = convert-myrdf-1195-to-1196.sh \
# 	convert-myrdf-1195-to-1196-internal.pl convert-myrdf-1195-to-1196-internal-q2.pl
# EXTRA_DIST = $(srcdir)/*.sh $(srcdir)/*.pl $(srcdir)/*.sparql

# noinst_PROGRAMS = convert-myrdf-1172-to-1173 update-emblem-listing-1181-or-latter-to-1191 

# INCLUDES =                                              \
# 	@STLPORT_CFLAGS@                                \
# 	-I. 						\
# 	-I$(srcdir) -I$(top_srcdir) -I$(top_srcdir)/src	\
# 	-I$(top_builddir)				\
#         -I$(includedir)                                 \
# 	-I/usr/local/include                            \
# 	@REDLAND_CFLAGS@                                \
# 	@CFLAGS@

# convert_myrdf_1172_to_1173_SOURCES = convert-myrdf-1172-to-1173.cpp
# convert_myrdf_1172_to_1173_LDADD = -lpopt @LIBFERRIS_LA@  @REDLAND_LIBS@

# update_emblem_listing_1181_or_latter_to_1191_SOURCES = update-emblem-listing-1181-or-latter-to-1191.cpp
# update_emblem_listing_1181_or_latter_to_1191_LDADD = -lpopt @LIBFERRIS_LA@  @REDLAND_LIBS@


