NULL=


SUBDIRS = sigtoy regression extoy comparetoy logging \
	stringtrimming sockets streams sqlplus               \
	medallions xml memorymanage ipc runner         \
	contextiterator quoting trivial          \
	contextiostream  links                               \
	timeparsing touch \
	rdf lucene hiddensymbols


